@@ -1,3 +1,7 @@
+2024-07-20 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+    * Introduce call context , resolves #30
+
 2024-06-16 Francois Suter (Idéative)  <typo3@ideative.ch>
 
     * Clean up code with Rector, drop compatibility with PHP 7.4 and 8.0, references #28
